# py-ur

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  robot.py  utils.py
api/: __init__.py  db.py  models.py  robot.py  robot_api.py  routes.py  schema.py  server.py
dashboard/: __init__.py  dashboard.py  dashboard_robot.py  datatypes.py
modbus/: __init__.py  datatypes.py  modbus.py
py_ur/: __init__.py  dashboard.py  dashboard_datatypes.py  modbus.py  robot.py  utils.py
py_ur/dashboard/: dashboard.py
py_ur/modbus/: __init__.py  modbus.py
tests/: test_dashboard.py  test_modbus.py  test_robot.py
