[project]
name = "py-ur"
version = "0.1.0a"
description = "Python app to communicate with Universal Robot (tested with UR3, UR5)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0.2"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"

[dependency-groups]
dev = [
  "neovim>=0.3.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]
