[project]
name = "py_ur"
version = "0.0.2a"
description = "Python app to communicate with Universal Robot (tested with UR3, UR5)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0.2", "sanic-ext>=23.12.0"]

[tool.setuptools.packages.find]
include = ["py_ur"]
exclude = ["api", "tests"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"

[dependency-groups]
dev = [
  "neovim>=0.3.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]
api = [
  "aiosqlite>=0.20.0",
  "pydantic>=2.10.4",
  "sanic[ext]>=24.12.0",
  "sqlalchemy[asyncio]>=2.0.36",
]
